--- a/app/src/main/res/layout/activity_bantuan.xml
+++ b/app/src/main/res/layout/activity_bantuan.xml
@@ -55,9 +55,9 @@
             android:layout_marginTop="15dp"
             android:layout_gravity="center_horizontal"
             android:gravity="center_horizontal"
-            android:text="Pengenalan Kata umum dan Bahasa Isyarat"
+            android:text="Aplikasi Terjemahan Indonesia Lampung"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
-            android:textColor="@color/white"
+            android:textColor="@color/black2"
             android:textSize="18sp"
             android:textStyle="bold" />
 
