--- a/app/src/main/res/layout/fragment_kamus.xml
+++ b/app/src/main/res/layout/fragment_kamus.xml
@@ -23,7 +23,14 @@
        android:orientation="vertical"
        android:padding="@dimen/spacing_middle">
 
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_marginHorizontal="10dp"
+        android:layout_height="200dp"
+        android:src="@drawable/siger2"/>
+
     <android.support.v7.widget.CardView
+        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardCornerRadius="2dp"
@@ -110,6 +117,17 @@
 
         </android.support.design.widget.TextInputLayout>
 
+        <Button
+            android:layout_marginTop="10dp"
+            android:id="@+id/btnTerjemah"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Terjemahkan"
+            android:background="@color/colorPrimary"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            android:layout_marginHorizontal="20dp"/>
+
        </LinearLayout>
 
 
@@ -187,7 +205,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="...."
+            android:text="."
             android:id="@+id/txtArti"
             android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
             android:textColor="@color/grey_80"
@@ -207,7 +225,6 @@
     <View
         android:layout_width="0dp"
         android:layout_height="@dimen/spacing_middle" />
-
 
     <View
         android:layout_width="0dp"
